:art: fix bug where nav gets extra padding

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -2,6 +2,10 @@
   --primary-green: #37c9a2;
 }
 
+main a {
+  display: inline-block;
+}
+
 header > section {
   display: none;
 }
